# langchain-playground

./: .env.example  .env_example  .gitignore  DEPLOYMENT_MONITORING_GUIDE.md  Dockerfile  Dockerfile.backup  FINAL_DEPLOYMENT_GUIDE.md  OAI_CONFIG_LIST  README.md  RENDER_DASHBOARD_UPDATE_GUIDE.md  RENDER_DEBUG_GUIDE.md  RENDER_DEPLOYMENT_GUIDE.md  STAGE2_DEPLOYMENT.md  STAGE3_DEPLOYMENT.md  Testbench.ipynb  YOUTUBE_API_DEPLOYMENT_FIX.md  app.py  chain.py  chatui.py  hf_dataset.ipynb  image_processing.py  llm_comparison.csv  llm_translate.py  minimax_tts.py  model_elo.pkl  nvnim.ipynb  pd.ipynb  pyproject.toml  pyproject_backup.toml  render-fixed.yaml  render-simple.yaml  render-youtube.yaml  render.yaml  requirements-full.txt  requirements-minimal.txt  requirements-render.txt  requirements-simple.txt  requirements-stage2.txt  requirements.txt  setup.py  (+10 more)
Examples/LATS/: lats.py
Examples/Notion/: __init__.py  formatters.py  main.py  markdown.py  notion_api.py  utils.py
Examples/ReWOO/: graph.py
Examples/STORM/: __init__.py  interview.py  models.py  outline.py  utils.py  writer.py
Examples/TextToSQL/: react.py  simple.py
Notion/: __init__.py  aa.py  block_formatter.py  formatters.py  main.py  markdown.py  math_block.py  math_converter.py  notion_api.py  notion_formatter.py  notion_io.py  rich_text.py  test.ipynb  use_client.py  utils.py  writer.py
Notion/notion_client/: READ.md  api_endpoints.py  client.py  errors.py  helpers.py
ReWOO/: graph.py
STORM/: __init__.py
TextToSQL/: __init__.py  react.py  simple.py  utils.py
YouTubeLoader/: whisper_fal.py  whisper_hf.py  youtube.py
YouTuberLoader/: requirements.txt
api/: index.py  main.py  simple_main.py  stage2_main.py  youtube.py  youtube_main.py  youtube_standalone.py  youtube_with_ui.py
coding/: tmp_code_b99c5e037a852e011461569515e5d3fc.py
dev/: .env.example  pyproject.toml
dev/src/Tools/WebLoader/: webloader.py
dev/src/Tools/WebSearch/: websearch.py
dev/src/Tools/YouTubeLoader/: requirements.txt  utils.py  youtube.py
dev/src/Tools/YouTubeLoader/Whisper/: __init__.py
dev/src/universal/: __init__.py  utils.py
langchain_playground/: __init__.py  gemini.py  image_processing.py  llm.py  llm_stats.py  pyproject.toml  router.py  universal.py  universal_chain.py  universal_graph.py  youtube_gemini.py
langchain_playground/AG2/: ag2.py  agentchat_oai_code_interpreter.ipynb  autobuild.py  autobuild_superteam.py  code.py  config.py  lats.py  openai_code_interpreter.ipynb  openai_code_interpreter.py  react.py  realtime.py  test.ipynb  universal_agent.py
langchain_playground/Deployment/: __init__.py  configuration.py  graph.py
langchain_playground/LATS/: lats.py
langchain_playground/MCP/Docs/: overview.txt  sdk_readme.md
langchain_playground/Notion/: __init__.py  formatters.py  main.py  markdown.py  notion_api.py  utils.py  writer.py
langchain_playground/STORM/: __init__.py  config.py  interview.py  models.py  orchestrator.py  outline.py  storm.py  test.ipynb  writer.py
langchain_playground/Smolagents-HF/: universal.py
langchain_playground/SmolagentsHF/: __init__.py  universal.py
langchain_playground/TextToSQL/: __init__.py  react.py  simple.py
langchain_playground/Tools/: __init__.py
langchain_playground/Tools/WebLoader/: __init__.py  webloader.py
langchain_playground/Tools/WebSearch/: __init__.py  websearch.py
langchain_playground/Tools/YouTubeLoader/: __init__.py  chromium_extractor.py  llm_formatter.py  requirements.txt  utils.py  whisper.py  whisper_replicate.py  youtube.py  youtube_local.py  youtube_memory.py
langchain_playground/Tools/YouTubeLoader/Whisper/: __init__.py  whisper_fal.py  whisper_hf.py  whisper_replicate.py  whisper_transcribe.py
langchain_playground/Tools/web/: __init__.py  webloader.py  websearch.py
langchain_playground/Tools/youtube/: __init__.py  scrapper.py  summarizer.py  summarizer_lite.py  utils.py
langchain_playground/UniversalChain/: __init__.py  chain.py  llm.py  tools.py
langchain_playground/YouTubeLoader/: __init__.py
langchain_playground/llm/: __init__.py  multimodal.py  openrouter.py  utils.py
langchain_playground/react_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
langchain_playground/universal/: graph.py
langsmith_playground/: langsmith.ipynb  langsmith_playground.ipynb  llm_eval.py  pairwise_eval.py  questions.py
multimodalchatbot/: README.md  main.py  pyproject.toml
multimodalchatbot/backend/gradio_multimodalchatbot/: multimodalchatbot.py
multimodalchatbot/demo/: app.py  requirements.txt
multimodalchatbot/frontend/: Index.svelte  package-lock.json  package.json
multimodalchatbot/frontend/shared/: ChatBot.svelte  utils.ts
react_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/LATS/: lats.py
src/MCP/Docs/: overview.txt
src/Notion/: markdown.py
src/SmolagentsHF/: universal.py
src/TextToSQL/: simple.py
src/Tools/WebLoader/: __init__.py
standalone-GUI/: chatui.py  image_processing.py
