[project]
name = "langchain-playground"
version = "0.1.0"
description = "Personal LangChain Playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.2.4",
    "docling>=2.57.0",
    "fal-client>=0.8.1",
    "fastapi>=0.119.0",
    "google-genai>=1.45.0",
    "httpx>=0.28.1",
    "ipython>=9.6.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "langgraph-prebuilt>=1.0.2",
    "langsmith>=0.4.37",
    "more-itertools>=10.8.0",
    "numpy>=2.3.4",
    "openai>=2.4.0",
    "opencc>=1.1.9",
    "pydantic>=2.12.2",
    "pydub>=0.25.1",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.1.1",
    "pytubefix>=10.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "smolagents>=1.22.0",
    "tavily-python>=0.7.12",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
    "yt-dlp>=2025.10.22",
]

[project.optional-dependencies]
whisper = [
    "optimum>=1.27.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_playground"]

[dependency-groups]
dev = [
    "iprogress>=0.4",
    "ipykernel>=6.30.0",
]
