[project]
name = "langchain-playground"
version = "0.1.0"
description = "Personal LangChain Playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.64.1",
    "httpx>=0.28.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.2",
    "langgraph>=1.0.4",
    "opencc>=1.1.9",
    "pillow>=10.0.0,<12.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tavily-python>=0.7.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_playground"]

[dependency-groups]
dev = [
    "iprogress>=0.4",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.8",
]
